# ER_lqz

./: .gitignore  GIT_SYNC_GUIDE.md  README.md  command.txt
franka_ros2_15/src/franka_bringup/config/: controllers.yaml  franka.config.yaml
franka_ros2_15/src/franka_bringup/launch/: franka.launch.py
franka_ros2_15/src/franka_controllers_real/: CMakeLists.txt  package.xml  serl_controllers_plugin.xml
franka_ros2_15/src/franka_controllers_real/config/: cartesian_impedance_controller_real.yaml  cyclonedds.xml
franka_ros2_15/src/franka_controllers_real/include/serl_franka_controllers/: cartesian_impedance_controller_real.hpp  pseudo_inversion.h
franka_ros2_15/src/franka_controllers_real/launch/: cartesian_impedance_controller.launch.py
franka_ros2_15/src/franka_controllers_real/msg/: SimplifiedFrankaState.msg  ZeroJacobian.msg
franka_ros2_15/src/franka_controllers_real/src/: cartesian_impedance_controller_real.cpp
franka_ros2_15/src/franka_description/urdfs/: fr3_franka_hand.srdf
lerobot/scripts/: merge_redcube_datasets.py  record.sh
lerobot/src/lerobot/async_inference/: constants.py  robot_client.py
lerobot/src/lerobot/robots/fr3_linker_l6_follower/: config_fr3_linker_l6_follower.py  fr3_linker_l6_follower.py
lerobot/src/lerobot/scripts/: lerobot_record.py
lerobot/src/lerobot/teleoperators/mocap_leader/: mocap_leader.py
linker_hand_ros2_sdk/: 4.0.0
linker_hand_ros2_sdk/src/linkerhand-ros2-sdk/linker_hand_ros2_sdk/linker_hand_ros2_sdk/: linker_hand.py
linker_hand_ros2_sdk/src/linkerhand-ros2-sdk/linker_hand_ros2_sdk/linker_hand_ros2_sdk/LinkerHand/core/can/: linker_hand_g20_can.py  linker_hand_l10_can.py  linker_hand_l20_can.py  linker_hand_l21_can.py  linker_hand_l25_can.py  linker_hand_l6_can.py  linker_hand_l7_can.py  linker_hand_o6_can.py
mocap_ros_py/: check.py  check_live.py
scripts/: act_infer_record.sh  client.sh  flatten_nested_git.sh  record.sh  server.sh
